Styling for dividing bar, fix header alignment

--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@ body, html {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #3a3a3a;
     font-size: 1rem;
+    margin: 0 100px;
 }
 
 article {
     position: relative;
     margin: 0 auto;
-    width: 75%;
+    width: 100%;
 }
 
 article ul {
@@ -26,10 +27,15 @@ article li {
 header {
     display: flex;
     flex-direction: row;
-    width: auto;
-    border-style: dotted;
-    border-width: 0 0 20px 0;
-    border-color: slategray;
+    width: 100%;
+    height: 100px;
+}
+
+.line {
+    width: 100%;
+    height: 8px;
+    background-color: grey;
+    background: repeating-linear-gradient(45deg, slategrey, white 0.5px);
 }
 
 #finalfooter {
@@ -43,8 +49,9 @@ header {
 
 #headerright {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    position: absolute;
+    right: 0;
+    margin: 0 200px 0 0;
 }
 
 .socialmedia {
@@ -61,6 +68,10 @@ header p, article p {
 
 article p {
     margin: 30px 30px 40px 0;
+}
+
+article>img {
+    width: 100%;
 }
 
 .directions {
@@ -104,4 +115,5 @@ article p {
     width: 95%;
     height: 300px;
     background-image: url("images/list-bg.png");
+    margin: 0 0 50px 0;
 }
